@@ -1,3 +1,11 @@
+Sun Nov 24 18:13:23 2013  Tanaka Akira  <akr@fsij.org>
+
+	* include/ruby/defines.h (SIZEOF_ACTUAL_BDIGIT): Defined.
+
+	* include/ruby/ruby.h (RBIGNUM_EMBED_LEN_MAX): Use
+	  SIZEOF_ACTUAL_BDIGIT instead of SIZEOF_BDIGITS.
+	  SIZEOF_BDIGITS can be different to sizeof(BDIGIT).
+
 Sun Nov 24 13:49:08 2013  Tanaka Akira  <akr@fsij.org>
 
 	* include/ruby/defines.h: Don't use int128_t for Bignum.
